<resources>
    <string name="app_name">POE Helper</string>

    <string name="menu_currency">Currency</string>
    <string name="menu_fragment">Fragment</string>
    <string name="menu_delirium_orb">Delirium Orb</string>
    <string name="menu_watchstone">Watchstone</string>
    <string name="menu_oil">Oil</string>
    <string name="menu_seed">Seeds</string>
    <string name="menu_incubator">Incubator</string>
    <string name="menu_scarab">Scarab</string>
    <string name="menu_fossil">Fossil</string>
    <string name="menu_essence">Essence</string>
    <string name="menu_resonator">Resonator</string>
    <string name="menu_divination_card">Divination Card</string>
    <string name="menu_skill_gem">Skill Gem</string>
    <string name="menu_base_type">Base Type</string>
    <string name="menu_helmet_enchant">Helmet Enchant</string>
    <string name="menu_map">Map</string>
    <string name="menu_unique_armour">Unique Armour</string>
    <string name="menu_unique_flask">Unique Flask</string>
    <string name="menu_unique_weapon">Unique Weapon</string>
    <string name="menu_unique_accessory">Unique Accessory</string>
    <string name="menu_unique_jewel">Unique Jewel</string>
    <string name="menu_prophecy">Prophecy</string>
    <string name="menu_unique_map">Unique Map</string>
    <string name="menu_beast">Beast</string>
    <string name="menu_vial">Vial</string>
    <string name="check_on">Check on</string>
    <string name="items"> Items</string>
    <string name="choose_league"> Choose a league</string>
    <string name="choose_currency"> Choose currency</string>
    <string name="change_color"> Change color</string>
    <string name="change_language"> Change language</string>
    <string name="no_data">no data</string>
    <string name="buy">buy</string>
    <string name="sell">sell</string>
    <string name="last_7_days">Last 7 days:</string>
    <string name="string_for">for</string>


</resources>
