<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/switch_fragments"
        android:icon="@drawable/ic_star_border_white_24dp"
        android:title="Bookmarks"
        app:showAsAction="always" />
    <item
        android:id="@+id/currency_picker"
        android:title="@string/choose_currency" />
    <item
        android:id="@+id/league_picker"
        android:title="@string/choose_league" />
    <item
        android:id="@+id/color_picker"
        android:title="@string/change_color" />
    <item
        android:id="@+id/language_picker"
        android:title="@string/change_language" />
<!--    <item-->
<!--        android:id="@+id/theme_picker"-->
<!--        android:title="Dark theme"-->
<!--        app:actionViewClass="android.widget.Switch" />-->
</menu>